...
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bootstrapDescriptionText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ssss_passphrase_enter_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="3"
            android:singleLine="false"
...
            app:drawableStartCompat="@drawable/ic_alert_triangle"
            app:drawableTint="?colorError" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bootstrapSubmit"
        style="@style/Widget.Vector.Button.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
