...
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?vctr_list_separator_on_surface" />

    <chat.progressive.app.core.ui.views.BottomSheetActionButton
        android:id="@+id/recoveryCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        app:actionTitle="@string/action_copy"
        app:leftIcon="@drawable/ic_clipboard"
        app:rightIcon="@drawable/ic_arrow_right"
...
